--- a/Pages/DamageItem.cshtml
+++ b/Pages/DamageItem.cshtml
@@ -47,7 +47,7 @@
             let firstEntry = wrapper.querySelector(".return-entry");
             let newEntry = firstEntry.cloneNode(true);
 
-            // Update radio button names to make them unique
+            @* // Update radio button names to make them unique
             newEntry.querySelectorAll('input[type="radio"]').forEach(function (input) {
                 let newName = `ReasonForReturn_${entryIndex}`;
                 input.name = newName;
@@ -57,6 +57,19 @@
             // Clear all input/select/textarea values
             newEntry.querySelectorAll("input, select, textarea").forEach(function (input) {
                 if (input.type !== "radio" && input.type !== "checkbox") input.value = "";
+            }); *@
+             // Clear all values
+            newEntry.querySelectorAll("input, select").forEach(input => {
+                if (input.tagName === "SELECT") {
+                    input.selectedIndex = 0;
+                } else if (input.type !== "radio" && input.type !== "checkbox") {
+                    input.value = "";
+                }
+
+                // Update name attributes with the new index
+                if (input.name) {
+                    input.name = input.name.replace(/\[\d+\]/, `[${entryIndex}]`);
+                }
             });
 
             wrapper.appendChild(newEntry);
@@ -168,7 +181,8 @@
 
                             <div id="returnEntriesWrapper">
                                 <div class="return-entry border p-3 mb-3 rounded position-relative">
-                                    <div class="my-4">
+                                    <div class="d-flex my-4">
+                                        <div class="">
                                         <label for="itemGroup">Item groups</label>
                                         <select class="form-select" name="itemGroup" id="itemGroup">
                                            @if (Model.ItemGroups != null)
@@ -181,17 +195,20 @@
                                                 }
                                         </select>
                                     </div>
-                                    <div class="mb-4">
+                                    <div class="">
                                         <label for="itemCode">@Model.lblItemCode</label>
-                                        <select class="form-select" name="ItemCode">
+                                        <input type="text" class="ItemCode form-control" id="ItemCode" readonly >
+                                        @* <select class="form-select" name="ItemCode" class="ItemCode">
                                             <option value="1">item group1</option>
                                             <option value="2">item group2</option>
                                             <option value="3">item group3</option>
-                                        </select>
+                                        </select> *@
                                     </div>
+                                    </div>
+                                    
                                     <div class="mb-4">
                                         <label>@Model.lblItemName (@Model.lblArabicLanguage)</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
-                                        <select class="ArabicItemName form-select" id="ArabicItemName">
+                                        <select class="ArabicItemName form-select" id="ArabicItemName"  onchange="onItemChange(this, 'ArabicItemName')">
                                                 <option value="">Select Item </option>
                                                 @foreach (var item in Model.ItemCards)
                                                 {
@@ -213,7 +230,7 @@
                                        
                                     <div class="mb-4">
                                          <label for="EnglishArabicName">@Model.lblItemName (@Model.lblEnglishLanguage)</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
-                                            <select class="EnglishArabicName form-select" id="EnglishArabicName">
+                                            <select class="EnglishArabicName form-select" id="EnglishArabicName" onchange="onItemChange(this, 'EnglishArabicName')">
                                                 <option value="">Select Item </option>
                                                 @foreach (var item in Model.ItemCards)
                                                 {
@@ -241,15 +258,15 @@
                                     </div>
                                     <div class="mb-4">
                                         <label for="chemical">@Model.lblChemical</label>
-                                        <input type="text" class="form-control" id="chemical" readonly>
+                                        <input type="text" class="chemical form-control" id="chemical" readonly>
                                     </div>
                                     <div class="mb-4">
                                         <label for="RiskRating">@Model.lblRiskRating</label>
-                                        <input type="text" class="form-control" id="RiskRating" readonly>
+                                        <input type="text" class="RiskRating form-control" id="RiskRating" readonly>
                                     </div>
                                     <div class="mb-4">
                                         <label for="stateofMatter">@Model.lblStateofMatter</label>
-                                        <select class="form-select" name="stateofMatter">
+                                        <select class="stateofMatter form-select" name="stateofMatter">
                                             <option value="1">item group1</option>
                                             <option value="2">item group2</option>
                                             <option value="3">item group3</option>
@@ -262,15 +279,15 @@
                                     </div>
                                     <div class="mb-4">
                                         <label for="UnitofMeasure">@Model.lblUnitOfMeasure</label>
-                                        <input type="text" class="form-control" id="UnitofMeasure" readonly>
+                                        <input type="text" class="UnitofMeasure form-control" id="UnitofMeasure" readonly>
                                     </div>
                                     <div class="mb-4">
                                         <label for="ReturnQuantity">@Model.lblReturned @Model.lblQuantity</label>
-                                        <input type="text" name="ReturnQuantity" value="" class="form-control" id="ReturnQuantity">
+                                        <input type="text" name="ReturnQuantity" value="" class="ReturnQuantity form-control" id="ReturnQuantity">
                                     </div>
                                     <div class="mb-4">
                                         <label for="ReturnNotes">@Model.lblReturnNotes</label>
-                                        <textarea class="form-control" id="ReturnNotes" name="ReturnNotes" rows="2"></textarea>
+                                        <textarea class="ReturnNotes form-control" id="ReturnNotes" name="ReturnNotes" rows="2"></textarea>
                                     </div>
                                     <button type="button" class="btn btn-danger btn-sm remove-entry me-3" style="position: absolute; top: 0; right: 0;">
                                         @Model.lblRemove
