--- a/Pages/AddDisbursement.cshtml
+++ b/Pages/AddDisbursement.cshtml
@@ -254,27 +254,46 @@
                                 </div>
                             </div>
                             
-                            <div class="mb-4">
-                                <label for="WarehouseName">@Model.lblStoreName</label>
-                                <select class="form-select" id="WarehouseName" asp-for="Report.WarehouseName">
-                                    @if (Model.Stores != null)
-                                    {
-                                        foreach (var item in Model.Stores)
+                            <div class="d-flex mb-4">
+                                <div class="me-2" style="width: 48%;">
+                                    <label for="WarehouseName">@Model.lblStoreName</label>
+                                    <select class="form-select" id="WarehouseName" asp-for="Report.WarehouseName">
+                                        @if (Model.Stores != null)
                                         {
-                                            if (item.IsActive == 1 && item.Ended == null)
+                                            foreach (var item in Model.Stores)
                                             {
-                                                <option value="@item.StoreId" selected="@(item.StoreId == Model.StoreId)">@item.StoreName</option>
+                                                if (item.IsActive == 1 && item.Ended == null)
+                                                {
+                                                    <option value="@item.StoreId" selected="@(item.StoreId == Model.StoreId)">@item.StoreName</option>
+                                                }
                                             }
                                         }
-                                    }
-                                </select>
+                                    </select>
+
+                                </div>
+                                
+                                <div class="form-group ms-2" style="width: 48%;">
+                                    <label>Warehouse Keeper</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
+                                    <select class="form-select" asp-for="Report.KeeperId"    id="KeeperId" name="KeeperId" >
+                                       
+                                        <option value="">Select Warehouse Keeper</option>
+                                        @if (Model.KeeperList != null)
+                                        {
+                                            foreach (var item in Model.KeeperList)
+                                            {
+                                                    <option value="@item.UserId" data-UserName="@item.FullName" selected="@(item.UserId == Model.DeptManagerId)">@item.FullName</option>
+                                            }
+                                        }
+                                    </select>
+                                </div>
 
                             </div>
+                            
 
                             <div class="d-flex mb-4">
-                                @* <div class="form-group mb-4">
-                                    <label>@Model.lblTechnicalMember</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
-                                    <select class="form-select" asp-for="Report.DeptManagerId"    id="TechnicalMember" name="TechnicalMember" >
+                                <div class="form-group me-2" style="width: 48%;">
+                                    <label>Department Manager</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
+                                    <select class="form-select" asp-for="Report.DeptManagerId"    id="DeptManagerId" name="DeptManagerId" >
                                        
                                         <option value="">Select Technical Member</option>
                                         @if (Model.DeptManagerList != null)
@@ -285,7 +304,24 @@
                                             }
                                         }
                                     </select>
-                                </div> *@
+                                </div>
+
+                                <div class="form-group ms-2" style="width: 48%;">
+                                    <label>Supervisor</label>
+                                    <select asp-for="Report.SupervisorId"  class="form-select" id="SupervisorId" name="SupervisorId" >
+                                        <option value="">Select General Supervisor</option>
+                                        @if (Model.SupervisorList != null)
+                                        {
+                                            foreach (var item in Model.SupervisorList)
+                                            {
+                                                    <option value="@item.UserId" data-UserName="@item.FullName" selected="@(item.UserId == Model.SupervisorId)">@item.FullName</option>
+                                            }
+                                        }
+
+
+                                    </select>
+                                    
+                                </div>
 
                             </div>
                         <div class="col-lg-12 col-sm-12">
