--- a/Pages/ItemCards.cshtml
+++ b/Pages/ItemCards.cshtml
@@ -70,7 +70,7 @@
 
                             <div class="form-group w-23">
                                 <label>Risk Rating</label>
-                                <input asp-for="@Model.ItemCardsFromReport[i].HazardTypeName" class="form-control" readonly />
+                                <input asp-for="@Model.ItemCardsFromReport[i].HazardTypeName" class="form-control" />
                             </div>
                             <div class="form-group w-23">
                                 <label>Expiry Date</label>
