--- a/Pages/AddDisbursement.cshtml
+++ b/Pages/AddDisbursement.cshtml
@@ -254,8 +254,8 @@
                                 </div>
                             </div>
                             
-                            <div class="d-flex mb-4">
-                                <div class="me-2" style="width: 48%;">
+                            <div class=" mb-4">
+                                <div class="me-2" >
                                     <label for="WarehouseName">@Model.lblStoreName</label>
                                     <select class="form-select" id="WarehouseName" asp-for="Report.WarehouseName">
                                         @if (Model.Stores != null)
@@ -272,7 +272,7 @@
 
                                 </div>
                                 
-                                <div class="form-group ms-2" style="width: 48%;">
+                                @* <div class="form-group ms-2" style="width: 48%;">
                                     <label>Warehouse Keeper</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
                                     <select class="form-select" asp-for="Report.KeeperId"    id="KeeperId" name="KeeperId" >
                                        
@@ -285,12 +285,12 @@
                                             }
                                         }
                                     </select>
-                                </div>
+                                </div> *@
 
                             </div>
                             
 
-                            <div class="d-flex mb-4">
+                            @* <div class="d-flex mb-4">
                                 <div class="form-group me-2" style="width: 48%;">
                                     <label>Department Manager</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
                                     <select class="form-select" asp-for="Report.DeptManagerId"    id="DeptManagerId" name="DeptManagerId" >
@@ -323,7 +323,7 @@
                                     
                                 </div>
 
-                            </div>
+                            </div> *@
                         <div class="col-lg-12 col-sm-12">
                             
                             <div id="returnEntriesWrapper">
